# future-ledger

./: .coverage  .gitignore  TODOS.md  pyproject.toml  环境配置.md
.claude/: ecc-tools.json  identity.json
.claude/commands/: add-module-spec-suite-plans.md  add-new-module-specification.md  update-existing-module-specifications.md
.claude/skills/FutureLedger/: SKILL.md
.claude/skills/future-ledger/: SKILL.md
.codex/: AGENTS.md
docs/designs/: v0-dividend-report.md
docs/plans/: python-review-2026-04-28.md  v0-dividend-report-implementation.md
docs/superpowers/plans/: 2026-04-24-v0-dividend-report-implementation.md  2026-05-14-module-spec-suite-final-review.md  2026-05-14-module-spec-suite-wave-1-report-assembly.md  2026-05-14-module-spec-suite-wave-2-output-pipeline.md  2026-05-14-module-spec-suite-wave-3-source-boundaries.md  2026-05-14-module-spec-suite-wave-4-normalization.md  2026-05-14-module-spec-suite-wave-5-metrics.md  2026-05-14-module-spec-suite-wave-6-test-fixtures.md  2026-05-14-module-spec-suite.md  (+6 more)
src/future_ledger/: __init__.py  cache.py  cli.py  domain.py  errors.py  pipeline.py  report_assembly.py  workbook_writer.py
tests/: conftest.py  test_cache.py  test_cli.py  test_domain_models.py  test_fixture_strategy.py  test_no_network_default.py  test_pipeline.py  test_report_assembly.py  test_workbook_writer.py
tests/fixtures/: README.md
tests/live/: test_akshare_smoke.py
tests/metrics/: test_dividend_yield.py  test_returns.py
tests/normalize/: test_dividends.py  test_prices.py
tests/sources/: test_akshare_client.py  test_universe.py
(+40 files in other folders)
